--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,7 +31,7 @@ body {
 	justify-content: center;
 	padding: 3rem 0;
 	gap: 2rem;
-	background-color: #fff;
+	background-color: #9e9797;
 	border-radius: 20px;
 	box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
 }
